# practicePostgres

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt  tables.md
cmake/: packages.cmake
postgresDocker/: docker-compose.yml
src/: CmakeListsInclude.cmake  database.hpp  main.cpp
src/domain/: Answer.h  CoordinatePoint.h  Group.h  ICpConsumers.h  IRadioInfoConsumer.h  ISdpRequestsContainer.h  POIProtocol.h  Timestamp.h  modes_v3.h
src/domain/azimuth/: Azimuth.cpp  Azimuth.h  IAzimuthConsumer.h  INorthDependent.h
src/endpoints/rli/: MakeAnswer.h  Pdp.h  PdpClient.cpp  PdpClient.h  RemoteAtcrbsSModule.cpp  RemoteAtcrbsSModule.h  RemoteParolModule.cpp  RemoteParolModule.h  RemotePdp.cpp  RemotePdp.h
src/network/: IPCPoint.h  NanomsgClient.cpp  NanomsgClient.h  NanomsgServer.cpp  NanomsgServer.h
src/proto_cpp/GenericPrototypes/: BitField.h  BitStream.h  Codogram.h  Field.h  PeriodicBitField.h
src/proto_cpp/mvrl-k/pdp/: AlarmBearing.h  Answer.h  Answer_v2.h  AtcrbsCoordinatePoint.h  AtcrbsCoordinatePoint_v2.h  EsgrloCoordinatePoint.h  EsgrloCoordinatePoint_v2.h
src/proto_cpp/remote-interrogator/: Acknowledgement.h  Acknowledgement_v2.h  Interrogation.h
src/proto_cpp/sdp/: ChangeAllTraces.h  ChangeTrace.h  ExternalTargetDesignation.h  Header.h  Trace.h
src/usecases/: PdpReport.cpp  PdpReport.h
